<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.clase.MainActivity">
    <item
        android:id="@+id/home_item"
        android:title="@string/action_home" />
    <item
        android:id="@+id/buttons_item"
        android:title="@string/action_buttons" />
    <item
        android:id="@+id/websites_item"
        android:title="@string/action_web" >
        <menu >
            <item
                android:id="@+id/amazon_item"
                android:enabled="true"
                android:title="@string/amazon" />
            <item
                android:id="@+id/twitch_item"
                android:title="@string/twitch" />
        </menu>
    </item>
    <item
        android:id="@+id/lists_item"
        android:title="@string/action_lists" />
    <item
        android:id="@+id/action_notification"
        android:title="@string/action_notification" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>